--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,97 @@
 ---
-
+// Supports weights 100-900
+import '@fontsource-variable/dm-sans';
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/images/favicon-32x32.png"
+        />
+
+        <title>Frontend Mentor | Bento grid</title>
+
+        <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+        <style>
+            body {
+                font-family: 'DM Sans Variable', sans-serif;
+            }
+            .attribution {
+                font-size: 11px;
+                text-align: center;
+            }
+            .attribution a {
+                color: hsl(228, 45%, 44%);
+            }
+
+            .grid_container {
+                display: grid;
+                grid-template-areas:;
+            }
+        </style>
+    </head>
+    <body class="">
+        <main class="flex max-w-7xl">
+            <div class="flex flex-col rounded-xl bg-purple500 p-6 text-white">
+                <p class="text-5xl font-semibold">
+                    Social Media <span class="text-yellow500">10x</span> Faster with
+                    AI
+                </p>
+                <img src="/illustration-five-stars.webp" alt="" />
+
+                <div class="text-center text-xs text-yellow100">
+                    Over 4,000 5-star reviews
+                </div>
+            </div>
+
+            <div class="flex flex-col items-center rounded-lg bg-yellow100 p-3">
+                <img src="/illustration-multiple-platforms.webp" alt="" />
+                <p
+                    class="pt-6 text-2xl font-semibold leading-[1.25rem] text-black"
+                >
+                    Manage multiple accounts and platforms.
+                </p>
+            </div>
+
+            <div class="bg-yellow500 p-3">
+                <p
+                    class="pb-3 text-2xl font-semibold leading-[1.25rem] text-black"
+                >
+                    Maintain a consistent posting schedule.
+                </p>
+                <img src="/illustration-consistent-schedule.webp" alt="" />
+            </div>
+
+            <div>
+                Schedule to social media. Optimize post timings to publish
+                content at the perfect time for your audience.
+            </div>
+
+            <div>Grow followers with non-stop content.</div>
+
+            <div>>56% faster audience growth</div>
+            <div>Create and schedule content quicker.</div>
+            <div>Write your content using AI.</div>
+
+            <div class="attribution">
+                Challenge by
+                <a href="https://www.frontendmentor.io?ref=challenge"
+                    >Frontend Mentor</a
+                >. Coded by <a href="#">Your Name Here</a>.
+            </div>
+        </main>
+    </body>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge"
+            >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+    </div>
 </html>
