some old work that need to be removed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,7 @@ import '@fontsource-variable/dm-sans';
 
             .grid_container {
                 display: grid;
+
                 gap: 2rem;
                 grid-template-columns: 1fr;
                 align-items: center;
@@ -121,9 +122,7 @@ import '@fontsource-variable/dm-sans';
                 </p>
             </div>
 
-            <div
-                class="posting relative h-52 overflow-hidden rounded-lg bg-yellow500 p-4"
-            >
+            <div class="box-6 bg-yellow500 p-3">
                 <p
                     class="pb-3 text-2xl font-semibold leading-[1.25rem] text-black"
                 >
@@ -136,64 +135,33 @@ import '@fontsource-variable/dm-sans';
                 />
             </div>
 
-            <div class="schedule bg-purple100">
-                <p class="py-5 text-2xl font-semibold tracking-tighter">
+            <div
+                class="box-4 relative min-w-32 overflow-hidden bg-purple100 p-3"
+            >
+                <p
+                    class="pb-4 text-2xl font-semibold leading-[1.25rem] text-black"
+                >
                     Schedule to social media.
                 </p>
                 <img
-                    width="290px"
+                    class="ml-10"
                     src="/illustration-schedule-posts.webp"
                     alt=""
                 />
-                <p class="px-4 py-6 text-center text-lg font-medium leading-5">
+                <p class="mt-4 text-sm">
                     Optimize post timings to publish content at the perfect time
                     for your audience.
                 </p>
             </div>
 
-            <div class="growth rounded-lg bg-purple500 p-3">
-                <img
-                    class="pt-2"
-                    width="240px"
-                    src="/illustration-grow-followers.webp"
-                    alt=""
-                />
-                <p
-                    class="px-4 py-6 text-center text-3xl font-semibold leading-6 text-white"
-                >
-                    Grow followers with non-stop content.
-                </p>
+            <div class="box-8 flex">
+                <img class="" src="/illustration-grow-followers.webp" alt="" />
+                <p>Grow followers with non-stop content.</p>
             </div>
 
-            <div class="speed rounded-lg p-5 shadow-inner">
-                <span class="text-4xl font-semibold">>56%</span> faster audience
-                growth
-                <img
-                    width="180px"
-                    src="/illustration-audience-growth.webp"
-                    alt=""
-                />
-            </div>
-            <div class="quicker rounded-lg bg-yellow100">
-                <p class="pb-5 text-3xl font-bold leading-6 tracking-tighter">
-                    Create and schedule content <span class="text-purple500"
-                        >quicker.</span
-                    >
-                </p>
-                <img
-                    width="200px"
-                    src="/illustration-create-post.webp"
-                    alt=""
-                />
-            </div>
-            <div class="content rounded-lg bg-yellow500 p-5">
-                <p
-                    class="py-5 text-3xl font-semibold leading-7 tracking-tighter"
-                >
-                    Write your content using AI.
-                </p>
-                <img width="225px" src="/illustration-ai-content.webp" alt="" />
-            </div>
+            <div class="box-7">>56% faster audience growth</div>
+            <div class="box1">Create and schedule content quicker.</div>
+            <div class="box-2">Write your content using AI.</div>
         </main>
     </body>
 </html>
